--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,6 +61,23 @@
       </section>
 
       <section class="mt-6 rounded-xl border border-slate-800 bg-slate-900 p-6">
+        <h2 class="text-lg font-semibold">Auto Reply Rules</h2>
+        <p class="mt-1 text-sm text-slate-400">Exact match rules. One reply per message. Group chats ignored.</p>
+        <div class="mt-4 grid gap-3 md:grid-cols-[1fr_1fr_auto]">
+          <input id="ruleMatch" class="rounded-md border border-slate-700 bg-slate-950 px-3 py-2" placeholder="Match text (exact)" />
+          <input id="ruleReply" class="rounded-md border border-slate-700 bg-slate-950 px-3 py-2" placeholder="Reply text" />
+          <button id="addRuleBtn" class="rounded-md bg-indigo-500 px-4 py-2 font-semibold text-white">Add / Update</button>
+        </div>
+        <div class="mt-4 rounded-md border border-slate-800 bg-slate-950 p-3 text-xs text-slate-300">
+          <pre id="rulesList" class="whitespace-pre-wrap"></pre>
+        </div>
+        <div class="mt-3 flex gap-2">
+          <button id="refreshRulesBtn" class="rounded-md bg-slate-700 px-4 py-2 font-semibold text-white">Refresh</button>
+          <button id="deleteRuleBtn" class="rounded-md bg-slate-700 px-4 py-2 font-semibold text-white">Delete Match</button>
+        </div>
+      </section>
+
+      <section class="mt-6 rounded-xl border border-slate-800 bg-slate-900 p-6">
         <h2 class="text-lg font-semibold">API Base URL</h2>
         <p class="mt-1 text-sm text-slate-400">Override for local or dockerized environments.</p>
         <div class="mt-4 flex flex-wrap gap-2">
